--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
   <header>
+        
+    <div class='errors-and-notices'>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+    </div>
+    
     <h1 class='site-title'>Ben Polinsky Web Design</h1>
     <%= link_to "benjamin.polinsky@gmail.com", "mailto:benjamin.polinsky@gmail.com", class: "email-me" %>
     
