--- a/app/views/front/home.html.erb
+++ b/app/views/front/home.html.erb
@@ -1,4 +1,4 @@
-<article>
+<article class='front'>
   <p>
     I love developing and desiging projects for the web.  
     I’ve spent the last  six years making sites and learning new technologies.  
