--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Link</h1>
+<div class='col-xs-12'><h1>New Link</h1></div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', links_path %>
+<div class='col-xs-12'>
+  <%= link_to 'Back', links_path, class: "btn btn-primary" %>
+</div>
