--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Project</h1>
+<div class='col-xs-12'><h1>New Project</h1></div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', projects_path %>
+<div class='col-xs-12'><%= link_to 'Back', projects_path, class: "btn btn-primary" %></div>
