--- a/app/views/front/_projects.html.erb
+++ b/app/views/front/_projects.html.erb
@@ -1,6 +1,6 @@
 <% projects.each do |project| %>
   <%= link_to front_project_path(project), class: "project-link" do %>
-    <%= image_tag project.image %>
-    <%= content_tag :p, project.name %>
+    <%= image_tag project.image.url(:thumb) %>
+    <%= content_tag :p, project.name, class: "project-link-name" %>
   <% end %>
 <% end %>
