--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,36 @@
 <html>
 <head>
   <title>Benpolinskyweb</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <script src="https://use.typekit.net/ttp0tmc.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
+  <link rel="icon" 
+        type="image/png" 
+        href="favicon.png">
 </head>
-<body>
-<div class='errors-and-notices'>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-</div>
+<body class="<%= body_class %>">
+<% unless flash.empty? %>
+  <div class='main-errors'>
+    <% flash.each do |key, value| %>
+      <%= content_tag :div, value, class: "flash #{key}" %>
+    <% end %>
+  </div>
+<% end %>
+
+<header class='admin-header'>
+  <nav class='navbar bg-inverse navbar-dark main'>
+    <div class='nav navbar-nav'>
+     
+      <%= active_link_to "Links", links_path, class: "nav-item nav-link" %>
+      <%= active_link_to "Projects", projects_path, class: "nav-item nav-link" %>
+      <%= active_link_to "Sign Out", destroy_admin_session_path, method: :delete, class: "nav-item nav-link" %>
+
+    </div> 
+  </nav>                  
+</header>
+
 <%= yield %>
 
 </body>
