--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+<div class='col-xs-12'>
+  <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Name:</strong>
@@ -22,3 +23,4 @@
 
 <%= link_to 'Edit', edit_link_path(@link) %> |
 <%= link_to 'Back', links_path %>
+</div>
