--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,45 +1,20 @@
-<%= form_for(@project) do |f| %>
-  <% if @project.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
+<div class='col-xs-12'>
+  <%= bootstrap_form_for(@project) do |f| %>
 
-      <ul>
-      <% @project.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
     <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :client %><br>
+
     <%= f.text_field :client %>
-  </div>
-  <div class="field">
-    <%= f.label :site_url %><br>
+
     <%= f.text_field :site_url %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
+
     <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :image %><br>
+
     <%= f.file_field :image %>
-  </div>
-  <div class="field">
-    <%= f.label :public_repo %><br>
+
     <%= f.text_field :public_repo %>
-  </div>
-  <div class="field">
-    <%= f.label :creation_date %><br>
+
     <%= f.datetime_select :creation_date %>
-  </div>
-  <div class="actions">
+
     <%= f.submit %>
-  </div>
 <% end %>
+</div>
