--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,16 +1,16 @@
-<p id="notice"><%= notice %></p>
+<div class='col-xs-12'>
+  <p id="notice"><%= notice %></p>
 
 <h1>Listing Projects</h1>
 
-<table>
+<table class='table'>
   <thead>
     <tr>
       <th>Name</th>
       <th>Client</th>
       <th>Site url</th>
-      <th>Description</th>
       <th>Image</th>
-      <th>Public repo</th>
+
       <th>Creation date</th>
       <th colspan="3"></th>
     </tr>
@@ -22,13 +22,15 @@
         <td><%= project.name %></td>
         <td><%= project.client %></td>
         <td><%= project.site_url %></td>
-        <td><%= project.description %></td>
-        <td><%= project.image %></td>
-        <td><%= project.public_repo %></td>
+        <td><%= image_tag project.image.url(:thumb) %></td>
         <td><%= project.creation_date %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <div class='btn-group'>
+            <%= link_to 'Show', project, class: "btn btn-default" %>
+            <%= link_to 'Edit', edit_project_path(project), class: "btn btn-default" %>
+            <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+          </div>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -36,4 +38,5 @@
 
 <br>
 
-<%= link_to 'New Project', new_project_path %>
+<%= link_to 'New Project', new_project_path, class: "btn btn-primary" %>
+</div>
