--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,23 +9,34 @@
   clear:both;
   overflow:hidden;
   margin-top:20px;
+
 }
 
 .project-link{
   float:left;
-  margin:5px;
+  margin:12px;
   height:150px;
   width:100px;
   position:relative;
+  display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: row;
+   flex-direction: row;
+   -webkit-align-items: center;
+   align-items: center;
+   -webkit-justify-content: center;
+   justify-content: center;
 }
 
 .project-link img{
-  width:100px;
+  margin-bottom:40px;
+  width:80px;
 }
 
 .project-link-name{
   position:absolute;
   bottom:0;
+  left:0;
   text-align:center;
   width:100%;
 }
