--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,7 +4,9 @@
   text-align:center;
   overflow:hidden;
 }
-
+.front-projects-container{
+  clear:both;
+}
 .recent-projects{
   clear:both;
   overflow:hidden;
