--- a/app/views/front/project.html.erb
+++ b/app/views/front/project.html.erb
@@ -1,6 +1,8 @@
 <aside class='crumbs'>
     <%= link_to "Home", root_path, class: "crumb-link"%>
+    <span class='crumb-separator'>&raquo;</span>
     <%= link_to "Projects", front_projects_path, class: "crumb-link"%>
+    <span class='crumb-separator'>&raquo;</span>
     <%= link_to @project.name.capitalize, front_project_path(@project), class: "crumb-link"%>
 </aside>
 
