--- a/app/views/front/projects.html.erb
+++ b/app/views/front/projects.html.erb
@@ -1,5 +1,6 @@
 <aside class='crumbs'>
     <%= link_to "Home", root_path, class: "crumb-link"%>
+    <span class='crumb-separator'>&raquo;</span>
     <%= link_to "Projects", front_projects_path, class: "crumb-link"%>
 </aside>
 
