--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,7 +3,7 @@
 
 <h1>Listing Projects</h1>
 
-<table class='table'>
+<table class='table sortable'>
   <thead>
     <tr>
       <th>Name</th>
@@ -18,7 +18,7 @@
 
   <tbody>
     <% @projects.each do |project| %>
-      <tr>
+    <%= content_tag :tr, class: "item", data: {item_id: project.id, post_path: url_for([:update_row_order, :projects])} do %>
         <td><%= project.name %></td>
         <td><%= project.client %></td>
         <td><%= project.site_url %></td>
@@ -31,7 +31,7 @@
             <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
           </div>
         </td>
-      </tr>
+        <% end %>
     <% end %>
   </tbody>
 </table>
