Administration namespace, front paths

--- a/app/assets/stylesheets/flashes.scss
+++ b/app/assets/stylesheets/flashes.scss
@@ -3,7 +3,7 @@
   top:0;
   left:0;
   width:100%;
-  background:$lightblue;
+  background:$darkblue;
   color:white;
   box-sizing:border-box;
   -moz-box-sizing:border-box;
