--- a/app/views/administration/links/_form.html.erb
+++ b/app/views/administration/links/_form.html.erb
@@ -1,5 +1,5 @@
 <div class='col-xs-12'>
-  <%= bootstrap_form_for(@link) do |f| %>
+  <%= bootstrap_form_for([:administration, @link]) do |f| %>
 
     <%= f.text_field :name %>
  
