--- a/app/views/administration/links/show.html.erb
+++ b/app/views/administration/links/show.html.erb
@@ -21,6 +21,6 @@
   <%= @link.subtitle %>
 </p>
 
-<%= link_to 'Edit', edit_link_path(@link) %> |
-<%= link_to 'Back', links_path %>
+<%= link_to 'Edit', edit_administration_link_path(@link) %> |
+<%= link_to 'Back', administration_links_path %>
 </div>
