--- a/app/views/administration/projects/show.html.erb
+++ b/app/views/administration/projects/show.html.erb
@@ -35,5 +35,5 @@
   <%= @project.creation_date %>
 </p>
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Edit', edit_administration_project_path(@project) %> |
+<%= link_to 'Back', administration_projects_path %>
