--- a/app/views/administration/links/new.html.erb
+++ b/app/views/administration/links/new.html.erb
@@ -3,5 +3,5 @@
 <%= render 'form' %>
 
 <div class='col-xs-12'>
-  <%= link_to 'Back', links_path, class: "btn btn-primary" %>
+  <%= link_to 'Back', administration_links_path, class: "btn btn-primary" %>
 </div>
