--- a/app/views/administration/projects/_form.html.erb
+++ b/app/views/administration/projects/_form.html.erb
@@ -1,5 +1,5 @@
 <div class='col-xs-12'>
-  <%= bootstrap_form_for(@project) do |f| %>
+  <%= bootstrap_form_for([:administration, @project]) do |f| %>
 
     <%= f.text_field :name %>
 
