--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -26,3 +26,25 @@ $darkblue: #154D65;
 .parsley-errors-list{
    padding:10px 0; 
 }
+
+@media screen and (max-width: 680px) {
+
+  *{
+    font-family: "acumin-pro";
+  }
+
+  h1{
+    font-size:16px;
+    text-transform:lowercase;
+    margin:0 auto;
+  }
+
+  p{
+    font-size:12px;
+  }
+
+  a, a:focus, a:active, a:visited{
+    color:$lightblue;
+    font-size:10px;
+  }  
+}
