--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -32,3 +32,39 @@ footer{
   right:0;
 }
 
+
+@media (min-width: 681px) and (max-width: 1200px) {
+  .links-container{
+    width:800px;
+    margin:0 auto;
+  }
+  
+  
+  .footer-link{
+    margin-bottom:30px;
+    float:left;
+
+    text-align:center;
+    width:266.67px;
+    height:75px;
+    position:relative;
+  } 
+}
+
+@media (max-width: 680px) {
+  .links-container{
+    width:100%;
+    margin:0 auto;
+  }
+  
+  
+  .footer-link{
+    margin-bottom:30px;
+    float:left;
+    clear:both;
+    text-align:center;
+    width:100%;
+    height:75px;
+    position:relative;
+  } 
+}
