--- a/app/views/front/project.html.erb
+++ b/app/views/front/project.html.erb
@@ -7,7 +7,7 @@
 </aside>
 
 <section class='project'>
-  <%= content_tag :h1, @project.name %>
+  <%= content_tag :h1, @project.name, class: "project-title" %>
   
   <div class='project-image-container'>
     <%= image_tag @project.image %>
