replace animatedModal with remodal

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,3 @@
-@import 'animate';
 @import 'base';
 @import 'header';
 @import 'footer';
@@ -8,3 +7,5 @@
 @import 'projects';
 @import 'flashes';
 @import 'crumbs';
+@import 'remodal.min';
+@import 'remodal.theme';
