--- a/app/views/shared/_quick_modal.html.erb
+++ b/app/views/shared/_quick_modal.html.erb
@@ -1,7 +1,7 @@
 <!--DEMO01-->
-<div id="animatedModal">
+<div class='modal' data-remodal-id='modal'>
     <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID  class="close-animatedModal" -->
-    <div class="close-animatedModal"> 
+    <div class="close"> 
         <%= image_tag 'x' %>
     </div>
        
