--- a/app/views/front/home.html.erb
+++ b/app/views/front/home.html.erb
@@ -7,7 +7,7 @@
   
   <p>
     Check out some of my recent projects and 
-    <%= link_to "drop me a line if you're intereted in working together.", '#animatedModal', id: "demo01" %>
+    <%= link_to "drop me a line if you're intereted in working together.", '#', class: "modal-click" %>
   </p>
 </article>
 
