--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -41,7 +41,7 @@
     button{
       height:50px;
       width:100%;
-      background:white;
+      background:#eaffc4;
       color:black;
       border:0;
       box-shadow:0; 
