--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -9,24 +9,42 @@ header h1.site-title{
   text-align:center;
 }
 
+header h1.site-title a{
+  font-size:16px;
+  text-transform:lowercase;
+  margin:0 auto;
+  color:black;
+  text-decoration:none;
+  
+}
+
 header a.email-me{
   text-align:center;
-  margin:0 auto;
+  float:right;
   display:block;
   font-size:10px;
   font-weight:700;
+  clear:both;
+  border-radius: 3px 3px 0px 0px;
+  border:0px;
+  position:relative;
+  top:-1px;
+
 }
 
 header .sub-title {
   text-align:center;
-  margin-top:15px;
+  margin-top:5px;
 }
 
-header .sub-title div{
+header .sub-title a{
   display:inline;
   margin:0 5px;
   color:#B5B5B5;;
   text-align:center;
   text-transform:lowercase;
   font-size:12px;
+  &:hover, &.active{
+    color:$lightblue;
+  };
 }
