--- a/app/views/front/project.html.erb
+++ b/app/views/front/project.html.erb
@@ -5,15 +5,16 @@
     <span class='crumb-separator'>&raquo;</span>
     <%= link_to @project.name.capitalize, front_project_path(@project), class: "crumb-link"%>
 </aside>
-
-<section class='project'>
-  <%= content_tag :h1, @project.name, class: "project-title" %>
+<div class='main-container'>
+  <section class='project'>
+    <%= content_tag :h1, @project.name, class: "project-title" %>
   
-  <div class='project-image-container'>
-    <%= image_tag @project.image %>
-  </div>
+    <div class='project-image-container'>
+      <%= image_tag @project.image %>
+    </div>
   
-  <div class='description'>
-    <%= @project.description %>
-  </div>
-</section>
+    <div class='description'>
+      <%= @project.description %>
+    </div>
+  </section>  
+</div>
