--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -17,7 +17,7 @@ p{
 }
 
 a, a:focus, a:active, a:visited{
-  color:$lightblue;
+  color:black;
   font-size:10px;
 }  
 
@@ -28,8 +28,7 @@ a, a:focus, a:active, a:visited{
 .bdp-btn{
   display: inline-block;
   padding: 3px 3px 3px 5px;
-  border: 1px black solid;
-  border-radius: 2px;
+
   color: black;
   text-decoration: none;
   background:white;
