ability to edit admin pass and email

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -24,14 +24,17 @@
      
       <%= active_link_to "Links", main_app.administration_links_path, class: "nav-item nav-link" %>
       <%= active_link_to "Projects", main_app.administration_projects_path, class: "nav-item nav-link" %>
-      <%= active_link_to "Sign Out", main_app.destroy_admin_session_path, method: :delete, class: "nav-item nav-link" %>
       <%= abstract_resource_admin_nav %>
       <%= active_link_to "Custom Fields", bp_custom_fields.root_path, class: "nav-item nav-link" %>
+      <%= link_to "Sign Out", main_app.destroy_admin_session_path, method: :delete, class: "nav-item nav-link" %>
+      <%= active_link_to "Admins", main_app.edit_administration_admin_path(Admin.first), class: "nav-item nav-link" %>
     </div> 
   </nav>                  
 </header>
 
-<%= yield %>
+<div class='container'>
+  <%= yield %>
+</div>
 
 </body>
 </html>
