--- a/app/views/administration/projects/index.html.erb
+++ b/app/views/administration/projects/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= project.client %></td>
         <td><%= project.site_url %></td>
         <td><%= image_tag project.image.url(:thumb) %></td>
-        <td><%= project.creation_date %></td>
+        <td><%= l project.creation_date, format: :amp %></td>
         <td>
           <div class='btn-group'>
             <%= link_to 'Show', [:administration, project], class: "btn btn-default" %>
