update home page

--- a/app/views/front/home.html.erb
+++ b/app/views/front/home.html.erb
@@ -2,9 +2,8 @@
   <article class='front'>
     <p>
       I love developing and desiging projects for the web.  
-      I’ve spent the last  six years making sites and learning new technologies.  
       I take a modern, modular approach to code, and am thrilled with the current direction of the industry.
-      Ruby on Rails is my go to web technology, but I love Wordpress for quick sites and am eager to get into React more and more.
+      Ruby on Rails, ReactJS, and Wordpress.
     </p>  
   
     <p>
