fix dated footer on devise layout

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Benpolinskyweb</title>
+  <title>Ben Polinsky - Philadelphia Web Design and Development</title>
   <%= stylesheet_link_tag    'application', 'parsley', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -11,20 +11,18 @@
 </head>
 <body class="<%= body_class %> ">
   <header class='front'>
-<% unless flash.empty? %>
-  <div class='main-errors'>
-    <% flash.each do |key, value| %>
-      <%= content_tag :div, value, class: "flash #{key}" %>
+    <% unless flash.empty? %>
+      <div class='main-errors'>
+        <% flash.each do |key, value| %>
+          <%= content_tag :div, value, class: "flash #{key}" %>
+        <% end %>
+      </div>
     <% end %>
-  </div>
-<% end %>
     
-    <h1 class='site-title'><%= link_to "Ben Polinsky Web Design", root_path %></h1>
+    <h1 class='site-title'><%= link_to "Ben Polinsky Web Development", root_path %></h1>
 
     <div class='sub-title'>
       <%= active_link_to "Projects", front_projects_path %>
-      <%= active_link_to "Open Source", open_source_path %>
-      <%= active_link_to "About", about_path %>
       <%= active_link_to "Contact", '#contact', active: false, class: "modal-click" %>
     </div>
     
@@ -33,13 +31,12 @@
 
   </header>
   
-  <div class='devise-content'>
+  <div class='main-container'>
     <%= yield %>  
   </div>
   
-  <!--Call your modal-->
 
-     <%= render :partial => 'shared/quick_modal' %>
+  <%= render :partial => 'shared/quick_modal' %>
 
   
   <footer>
