--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -26,7 +26,9 @@
       <%= active_link_to "Contact", '#contact', active: false, class: "modal-click" %>
     </div>
     
-    <%= link_to "benjamin.polinsky@gmail.com".html_safe, "mailto:benjamin.polinsky@gmail.com", class: "email-me bdp-btn" %>
+ 		<%= link_to "resumé", "/ben_polinsky_resume_12_16.pdf", target: 'new', class: "email-me bdp-btn" %>
+		<span class='divider'>|</span>
+		<%= link_to "Email", "mailto:benjamin.polinsky@gmail.com", class: "email-me bdp-btn" %>
     
 
   </header>
