--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -24,12 +24,19 @@ header a.email-me{
   display:block;
   font-size:10px;
   font-weight:700;
-  clear:both;
+  clear:none;
   border-radius: 3px 3px 0px 0px;
   border:0px;
   position:relative;
   top:-1px;
-
+}
+header .divider{
+  float: right;
+  top: -3px;
+  position: relative;
+  padding-left: 2px;
+  height: 20px;
+  overflow: hidden;
 }
 
 header .sub-title {
@@ -47,12 +54,4 @@ header .sub-title a{
   &:hover, &.active{
     color:$lightblue;
   };
-}
-
-
-
-@media screen and (max-width: 680px) {
-  header a.email-me{
-   display:none; 
-  }
 }
