--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -26,7 +26,7 @@
       <%= active_link_to "Contact", '#contact', active: false, class: "modal-click" %>
     </div>
     
- 		<%= link_to "resumé", "/ben_polinsky_resume_12_16.pdf", target: 'new', class: "email-me bdp-btn" %>
+ 		<%= link_to "resume", "/ben-polinsky-jan-2017.pdf", target: 'new', class: "email-me bdp-btn" %>
 		<span class='divider'>|</span>
 		<%= link_to "Email", "mailto:benjamin.polinsky@gmail.com", class: "email-me bdp-btn" %>
     
