update front copy

--- a/app/views/front/home.html.erb
+++ b/app/views/front/home.html.erb
@@ -3,7 +3,7 @@
     <p>
       I love developing and desiging projects for the web.  
       I take a modern, modular approach to code, and am thrilled with the current direction of the industry.
-      Ruby on Rails, ReactJS, and Wordpress.
+      Ruby on Rails, React.js, and Wordpress are currently what I reach for when building sites, but I'm constantly checking out new libraries and frameworks to see what they offer.
     </p>  
   
     <p>
