quick honeypot on contact form

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -50,6 +50,10 @@ a.projects-view-all{
   clear:both;
 }
 
+.hpot{
+ display:none; 
+}
+
 
 @media screen and (max-width: 680px) {
   .main-container{
@@ -81,3 +85,4 @@ a.projects-view-all{
     width:100%;
   }
 }
+
