--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -5,35 +5,36 @@
   <%= stylesheet_link_tag    'application', 'parsley', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <script src="https://use.typekit.net/ttp0tmc.js"></script>
+  <script src="https://use.typekit.net/alc5rtb.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <%= favicon_link_tag 'favicon.png' %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="<%= body_class %> ">
   <header class='front'>
-    <% unless flash.empty? %>
-      <div class='main-errors'>
-        <% flash.each do |key, value| %>
-          <%= content_tag :div, value, class: "flash #{key}" %>
-        <% end %>
-      </div>
-    <% end %>
+    <%# unless flash.empty? %>
+      <!-- <div class='main-errors'>
+        <%# flash.each do |key, value| %>
+          <%# content_tag :div, value, class: "flash #{key}" %>
+        <%# end %>
+      </div> -->
+    <%# end %>
     
-    <h1 class='site-title'><%= link_to "Ben Polinsky Web Development", root_path %></h1>
+    <h1 class='site-title'><%= link_to "Ben Polinsky Web Design", root_path %></h1>
 
-    <div class='sub-title'>
-      <%= active_link_to "Projects", front_projects_path %>
-      <%= active_link_to "Contact", '#contact', active: false, class: "modal-click" %>
-    </div>
+    <!-- <div class='sub-title'>
+      <%# active_link_to "Projects", front_projects_path %>
+      <%# active_link_to "Contact", '#contact', active: false, class: "modal-click" %>
+    </div> -->
     
- 		<%= link_to "resume", "/ben_polinsky_resume_april_2017.pdf", target: 'new', class: "email-me bdp-btn" %>
-		<span class='divider'>|</span>
-		<%= link_to "Email", "mailto:benjamin.polinsky@gmail.com", class: "email-me bdp-btn" %>
+ 		<%# link_to "resume", "/ben_polinsky_resume_april_2017.pdf", target: 'new', class: "email-me bdp-btn" %>
+    <!-- <span class='divider'>|</span> -->
+		<%# link_to "Email", "mailto:benjamin.polinsky@gmail.com", class: "email-me bdp-btn" %>
     
 
   </header>
   
-  <div>
+  <div class='main-container'>
     <%= yield %>  
   </div>
   
@@ -41,17 +42,17 @@
   <%= render :partial => 'shared/quick_modal' %>
 
   
-  <footer>
+  <!-- <footer>
     <div class='links-container'>
-      <% @links.each do |link| %>
+      <# @links.each do |link| %>
         <div class='footer-link'>
-          <%= link_to link.url do %>
-            <%= image_tag link.image.url %>
-            <%= content_tag :p, link.subtitle, class: "footer-link-subtitle" %>
-          <% end %>
+          <%# link_to link.url do %>
+            <%# image_tag link.image.url %>
+            <%# content_tag :p, link.subtitle, class: "footer-link-subtitle" %>
+          <%# end %>
         </div>
-      <% end %>
-    </div>    
-  </footer>  
+      <%# end %>
+    </div>
+  </footer>   -->
 </body>
 </html>
