--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,57 +1,70 @@
 header.front{
-  max-width:1200px;
+  width:100%;
+  height: 50vh;
   margin:0 auto;
-  border-bottom:1px solid black;
+  box-sizing: border-box;
   padding-bottom:20px;
+  background: #20444d;
+  position:relative;
 }
 
 header h1.site-title{
   text-align:center;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  min-width:270px;
 }
+//// acier-bat-noir
+//header h1.site-title a{
+//  text-transform:lowercase;
+//  margin:0 auto;
+//  font-family: "acier-bat-noir";
+//  font-size: 175px;
+//  font-weight: 400;
+//  line-height: 0.7;
+//  letter-spacing: -0.09em;
+//  margin: 0 auto;
+//  color: #fff;
+//  text-decoration: none;
+//}
 
+// acier-bat-solid
 header h1.site-title a{
-  font-size:16px;
   text-transform:lowercase;
-  margin:0 auto;
-  color:black;
-  text-decoration:none;
-  
+  font-family: "acier-bat-solid";
+  font-size: 8vh;
+  font-weight: 400;
+  line-height: 0.7;
+  letter-spacing: -0.03em;
+  margin: 0 auto;
+  color: #fff;
+  text-decoration: none;
 }
 
 header a.email-me{
-  text-align:center;
-  float:right;
-  display:block;
-  font-size:10px;
-  font-weight:700;
-  clear:none;
-  border-radius: 3px 3px 0px 0px;
-  border:0px;
-  position:relative;
-  top:-1px;
+  
 }
+
 header .divider{
-  float: right;
-  top: -3px;
-  position: relative;
-  padding-left: 2px;
-  height: 20px;
-  overflow: hidden;
+  
 }
 
 header .sub-title {
-  text-align:center;
-  margin-top:5px;
+ 
 }
 
 header .sub-title a{
-  display:inline;
-  margin:0 5px;
-  color:#B5B5B5;;
-  text-align:center;
-  text-transform:lowercase;
-  font-size:12px;
+
   &:hover, &.active{
-    color:$lightblue;
+    
   };
+}
+
+@media all and (max-width: 736px) and (orientation: landscape){
+  header.front {
+    height:20vh;
+  }
+
 }
