--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,13 +1,21 @@
 .main-container{
-  width:500px;
+  width:100%;
+  height:auto;
   margin:0 auto;
   text-align:center;
   overflow:hidden;
   clear:both;
+  background: #000;
+  color:#fff;
+}
+
+article.front{
+  width:100%;
 }
 .front-projects-container{
   clear:both;
 }
+
 .recent-projects{
   clear:both;
   overflow:hidden;
@@ -52,37 +60,5 @@ a.projects-view-all{
 
 .hpot{
  display:none; 
-}
-
-
-@media screen and (max-width: 680px) {
-  .main-container{
-    width:380px;
-    margin:0 auto;
-    text-align:center;
-    overflow:hidden;
-  }
-  .front-projects-container{
-    clear:both;
-  }
-  .recent-projects{
-    clear:both;
-    overflow:hidden;
-    width:250px;
-    margin:20px auto 0 auto;
-  }
-
-  a.projects-view-all{
-    float:none;
-    clear:both;
-    text-align:center;
-  }
-
-}
-
-@media screen and (max-width: 400px) {
-  .main-container{
-    width:100%;
-  }
 }
 
