webpack and viewpoint units buggyfill

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -4,6 +4,7 @@
   <title>Ben Polinsky - Philadelphia Web Design and Development</title>
   <%= stylesheet_link_tag    'application', 'parsley', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_pack_tag 'application' %>
   <%= csrf_meta_tags %>
   <script src="https://use.typekit.net/alc5rtb.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
