--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -2,8 +2,9 @@ $lightblue: #29ABE2;
 $darkblue: #154D65;
 
 *{
-//  font-family: "acumin-pro";
-  font-weight:200;
+  font-family: "essonnes-text";
+  font-weight:400;
+  box-sizing: border-box;
 }
 
 body{
@@ -17,14 +18,23 @@ h1{
   font-family: "acier-bat-noir";
 }
 
+h2{
+  font-size:16px;
+  text-transform:lowercase;
+  margin:0 auto;
+  font-family: "acier-bat-solid";
+}
+
 p{
   font-size:12px;
 }
 
 a, a:focus, a:active, a:visited{
   color:black;
-  font-size:10px;
-}  
+  font-size:12px;
+  font-family: 'acier-bat-solid';
+}
+  
 
 .parsley-errors-list{
    padding:10px 0; 
@@ -55,28 +65,4 @@ a, a:focus, a:active, a:visited{
   position:relative;
   top:-1px;
 }
-
-
-@media screen and (max-width: 680px) {
-
-  *{
-    font-family: "acumin-pro";
-  }
-
-  h1{
-    font-size:16px;
-    text-transform:lowercase;
-    margin:0 auto;
-  }
-
-  p{
-    font-size:12px;
-  }
-
-  a, a:focus, a:active, a:visited{
-    color:$lightblue;
-    font-size:10px;
-  }  
-}
-
 
