--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,10 +1,11 @@
 header.front{
   width:100%;
-  height: 100vh;
+  height: 75vh;
   margin:0 auto;
   box-sizing: border-box;
   padding-bottom:20px;
-  background: #20444d;
+  background: #FF413B;
+//  background: #20444d;
   position:relative;
 }
 
