--- a/app/views/front/home.html.erb
+++ b/app/views/front/home.html.erb
@@ -1,17 +1,62 @@
-<article class='front'>
-  <p>
-    I love developing and desiging projects for the web.  
-    I take a modern, modular approach to code, and am thrilled with the current direction of the industry.
-    Ruby on Rails, React.js, and Wordpress are currently what I reach for when building sites, but I'm constantly checking out new libraries and frameworks to see what they offer.
-  </p>  
 
-  <p>
-    Check out some of my recent projects and 
-    <%= link_to "drop me a line if you're intereted in working together.", '#', class: "modal-click" %>
-  </p>
-</article>
+  <section id='projects' class='front-feature'>
+    <h1>Projects</h1>    
 
-<section class='recent-projects'>
-  <%= render :partial => 'projects', locals: {projects: @projects} %>
-  <%= link_to "View All <span class='icon'>&raquo;</span>".html_safe, front_projects_path, class: "projects-view-all bdp-btn" %>
-</section>
+    <article id='art-vs-art' class='bp-feature'>
+      <header>
+        <h2>Art vs Art</h2>
+        <a class='project-link' href='http://artvsart.io'>artvsart.io</a>      
+      </header>
+        <p>
+          The idea is simple: pick between two pieces of art
+          Not just a painting versus painting, but any 'work of art' 
+          against any other. Finally: The Little Prince vs. Pulp Fiction.
+          At last: The Simpsons vs. War & Peace.  You get the idea.
+        </p>
+        <p>
+          Art vs. Art's API is built using Ruby on Rails with a front-end developed in React.  A mobile version is planned using React Native.
+        </p>
+    </article>
+    
+    <article id='mineraliety' class='bp-feature'>
+      <header>
+        <h2>Mineraliety</h2>
+        <a class='project-link' href='https://mineraliety.com'>mineraliety.com</a>      
+      </header>
+
+      <p>
+        Mineraliety was an Etsy-type marketplace for mineral enthuiasts.  Unfortunately, it closed down in April of 2017.
+      </p>
+
+      <p>
+        Mineraliety was a large Ruby on Rails application with many facets to it.  Read more about the technology used and the lessons I learned <%= link_to 'here', 'here' %>.
+      </p>
+    </article>
+
+    <%= link_to "View All Projects + Sites", front_projects_path, class: "projects-view-all bdp-btn" %>    
+  </section>
+  
+  <section id='technology' class='front-feature'>
+    <header class='technology-header'>
+      <h1>Technology</h1>
+      <p>Choosing the right platform for the right client and project is one of the biggest decisions you can make.</p>  
+    </header>    
+    
+    <article id='ruby-on-rails' class='bp-feature'>
+      <h2>Ruby on Rails</h2>
+      <p>I've been working with Ruby on Rails since late 2011.  At the time, I was doing front end work and using Wordpress as my main platform for developing.</p>
+      <p>Rails was my introduction to application development, from testing and version control, to automated deployments, NOSQL databases, and everything else under the sun that goes into <%= link_to "web application development", 'http://s3.amazonaws.com/maptini.com/app/public/system/images/38573/original/52D6FC49-085A-47F8-8E1B-83740ABBD807.png?1333665118' %>.</p>
+    </article>
+    
+    <article id='javascript' class='bp-feature'>
+      <h2>JavaScript</h2>
+      <p>So many JavaScript frameworks, which to choose?  I've settled on React.js for now, but vue.js is certainly appealing.  "The Langauge of the Web" is becoming much more as technologies like React Native allow us to write mobile apps in JS.</p>
+    </article>
+    
+    <article id='wordpress' class='bp-feature'>
+      <h2>Wordpress</h2>
+      <p>Wordpress is a great platform to develop on and continues to mature.</p>
+      <p>Many people are familiar with its admin interface, which makes it a great choice as a backend for many projects.  Asides from Wordpress' extensive plugin environment, The Bedrock framework, Twig templating, and other methods for separating logic from presentation and markup are all great developments.</p>
+    </article>
+  </section>
+
