mobile redesign solid

--- a/app/assets/stylesheets/crumbs.scss
+++ b/app/assets/stylesheets/crumbs.scss
@@ -5,11 +5,13 @@ aside.crumbs{
   text-align:left;
   max-width:1200px;
   margin:0 auto;
+  padding: 0 8px;
 }
 
 .crumb-link{
   display:inline;
   text-align:center;
+  font-size:14px;
 }
 
 .crumb-separator{
