--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -14,6 +14,7 @@ a.footer-contact-link{
   text-align:center;
   margin:0 auto 20px auto;
   display:block;
+  text-decoration:none;
 }
 
 .footer-link{
