--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,41 +1,48 @@
 header.front{
   width:100%;
-  height: 75vh;
+  height: 20vh;
   margin:0 auto;
   box-sizing: border-box;
   padding-bottom:20px;
   background: #FF413B;
-//  background: #20444d;
   position:relative;
+  h1.site-title a{
+    font-size:24px;
+  }
 }
 
-header h1.site-title{
+body.front-home header.front{
+  height: 75vh;
+}
+
+body.front header.front h1.site-title{
   text-align:center;
   position:absolute;
   top:50%;
   left:50%;
   transform: translate(-50%, -50%);
   min-width:270px;
+  a{
+    font-size:8vh;
+  }
 }
-//// acier-bat-noir
-//header h1.site-title a{
-//  text-transform:lowercase;
-//  margin:0 auto;
-//  font-family: "acier-bat-noir";
-//  font-size: 175px;
-//  font-weight: 400;
-//  line-height: 0.7;
-//  letter-spacing: -0.09em;
-//  margin: 0 auto;
-//  color: #fff;
-//  text-decoration: none;
-//}
+
+body.front-projects header.front h1.site-title{
+  a{
+    font-size:24px;
+  }
+}
+
+body.front-project header.front h1.site-title{
+  a{
+    font-size:24px;
+  }
+}
 
 // acier-bat-solid
-header h1.site-title a{
+body header.front h1.site-title a{
   text-transform:lowercase;
   font-family: "acier-bat-solid";
-  font-size: 8vh;
   font-weight: 400;
   line-height: 0.7;
   letter-spacing: -0.03em;
@@ -44,23 +51,13 @@ header h1.site-title a{
   text-decoration: none;
 }
 
-header a.email-me{
+.header-quick-links{
+  position:absolute;
+  top:5px;  
+  right:5px;
+}
+a.bdp-btn{
   
-}
-
-header .divider{
-  
-}
-
-header .sub-title {
- 
-}
-
-header .sub-title a{
-
-  &:hover, &.active{
-    
-  };
 }
 
 @media all and (max-width: 736px) and (orientation: landscape){
