--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,12 +1,52 @@
 section.project{
   margin-top:20px;
+  max-width:400px;
+  margin:0 auto;
+  padding:20px;
+  box-sizing:border-box;
+  font-size:14px;
 }
 
 .project-title{
-  margin-bottom:10px;
+  font-family: "acier-bat-solid";
+  font-size:30px;
+  line-height:0.7;
+  margin:5px auto;
 }
 
-.project-image-container img{
-  margin:10px 0;
+.front-projects-container{
+  display:flex; 
+  flex-wrap:wrap;
+  align-items:center;
+  justify-content:flex-start;
+  margin:0px auto 50px auto;
+}
+
+.project-index-link{
   width:50%;
+  height:200px;
+  position:relative;
+}
+
+.project-index-link-image{
+  max-width:100%;
+  top:50%;
+  transform:translateY(-50%);
+  position:relative;
+}
+
+.project-link-name{
+  position:absolute;
+  bottom:0;
+  left:0;
+  right:0;
+  text-align:center;
+}
+
+.project-image-container{
+  margin: 20px auto;
+}
+
+section.project .description{
+    margin:10px auto;
 }
