--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -22,15 +22,11 @@
     <%# end %>
     
     <h1 class='site-title'><%= link_to "Ben Polinsky Web Design", root_path %></h1>
+    <div class='header-quick-links'>
+      <%= link_to "resume", "/ben_polinsky_resume_april_2017.pdf", target: 'new', class: "email-me bdp-btn" %>
+      <%= link_to "Email", "mailto:benjamin.polinsky@gmail.com", class: "email-me bdp-btn" %>      
+    </div>
 
-    <!-- <div class='sub-title'>
-      <%# active_link_to "Projects", front_projects_path %>
-      <%# active_link_to "Contact", '#contact', active: false, class: "modal-click" %>
-    </div> -->
-    
- 		<%# link_to "resume", "/ben_polinsky_resume_april_2017.pdf", target: 'new', class: "email-me bdp-btn" %>
-    <!-- <span class='divider'>|</span> -->
-		<%# link_to "Email", "mailto:benjamin.polinsky@gmail.com", class: "email-me bdp-btn" %>
     
 
   </header>
